--- a/site/entry.html
+++ b/site/entry.html
@@ -7,7 +7,7 @@
 
   <!-- Nightingale Sequence (sequence viewer) -->
   <script type="module">
-    import 'https://unpkg.com/@nightingale-elements/nightingale-sequence@7.4.0/dist/index.js';
+    import 'https://cdn.jsdelivr.net/npm/@nightingale-elements/nightingale-sequence@7.4.0/dist/index.js';
   </script>
 
   <style>
